--- a/index.html
+++ b/index.html
@@ -7,17 +7,40 @@
     <script src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script>
-        // Tailwind konfigūracija
-        tailwind.config = {
-            darkMode: 'class',
-            theme: {
-                extend: {}
-            }
-        }
-    </script>
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
     <style>
+        /* Tailwind baziniai stiliai */
+        .flex { display: flex; }
+        .flex-col { flex-direction: column; }
+        .items-center { align-items: center; }
+        .justify-center { justify-content: center; }
+        .min-h-screen { min-height: 100vh; }
+        .p-4 { padding: 1rem; }
+        .w-full { width: 100%; }
+        .max-w-7xl { max-width: 80rem; }
+        .text-3xl { font-size: 1.875rem; line-height: 2.25rem; }
+        .font-bold { font-weight: 700; }
+        .mb-8 { margin-bottom: 2rem; }
+        .flex-col { flex-direction: column; }
+        .gap-4 { gap: 1rem; }
+        .mt-4 { margin-top: 1rem; }
+        .mb-4 { margin-bottom: 1rem; }
+        .text-2xl { font-size: 1.5rem; line-height: 2rem; }
+        .px-8 { padding-left: 2rem; padding-right: 2rem; }
+        .py-4 { padding-top: 1rem; padding-bottom: 1rem; }
+        .space-y-2 > * + * { margin-top: 0.5rem; }
+        .grid { display: grid; }
+        .grid-cols-1 { grid-template-columns: repeat(1, minmax(0, 1fr)); }
+        .gap-2 { gap: 0.5rem; }
+        .p-2 { padding: 0.5rem; }
+        .bg-white\/5 { background-color: rgba(255, 255, 255, 0.05); }
+        .rounded-lg { border-radius: 0.5rem; }
+        .text-amber-400 { color: #fbbf24; }
+        .text-white { color: white; }
+        .text-sm { font-size: 0.875rem; line-height: 1.25rem; }
+        .text-emerald-400 { color: #34d399; }
+        .text-blue-400 { color: #60a5fa; }
+        
         canvas {
             border: 2px solid rgba(255, 255, 255, 0.1);
             background: linear-gradient(to bottom, #1a1a2e, #16213e);
